Implemented client utils in raft test package ; Centralised manager creation logic in LeaderElectionTest